fixing disconnection issues on native search

--- a/Stomp Example/Android-Native-Stomp/app/src/main/res/layout/activity_main.xml
+++ b/Stomp Example/Android-Native-Stomp/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/btnSearch"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Search..."
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+        <Button
+            android:id="@+id/btnConnect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Connect"/>
+
+        <Button
+            android:id="@+id/btnDisconnect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Disconnect"/>
+
+        <Button
+            android:id="@+id/btnGet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Get..."/>
+
+        <Button
+            android:id="@+id/btnOnce"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="One Key"/>
+    </LinearLayout>
+
 
 </RelativeLayout>
